--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,11 @@
-title: Hacker-Blog
+title: Mastiff Gaming
 description: "A Jekyll Blog Theme For Hackers"
 author:
-  name: "SomeHacker"
+  name: "Mastiff Gaming"
   email: "someone@somewebsite.somedomain"
   url: "https://ashishchaudhary.in/hacker-blog"
 
-baseurl: /
+baseurl: /mastiffgaming
 
 source: .
 destination: ./_site
@@ -28,5 +28,5 @@ plugins:
   - jekyll-sitemap
 
 # Custom variables
-owner : "SomeHacker"
-year : "2020"
+owner : "MastiffGaming"
+year : "2024"
